--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 ################### DataSource Configuration ##########################
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/thesisdb
+spring.datasource.url=jdbc:mysql://localhost:3306/thesisdb?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=admin
 
@@ -10,7 +10,7 @@ spring.datasource.initialization-mode=always
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-server.port=${PORT:8080}
+server.port=${PORT:8080}mvn
 
 #server.port=${PORT:5000} KITELEPÍTVE HEROKURA
 #az 5000 port nélkül hibát dob
