--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.initialization-mode=always
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-server.port=${PORT:8080}mvn
+server.port=${PORT:8080}
 
 #server.port=${PORT:5000} KITELEPÍTVE HEROKURA
 #az 5000 port nélkül hibát dob
