--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,8 @@ server.port=${PORT:8080}
 
 #server.port=${PORT:5000} KITELEPÍTVE HEROKURA
 #az 5000 port nélkül hibát dob
+
+
+####################FILE UPLOAD#############################
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
