--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,8 @@ server.port=${PORT:8080}
 ####################FILE UPLOAD#############################
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
+
+
+
+########################Error Page Default######################################
+server.error.whitelabel.enabled=false
