--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 ################### DataSource Configuration ##########################
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/thesisdb?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=admin
+## spring.datasource.url=jdbc:mysql://localhost:3306/thesisdb?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://b04fd5afbba5bb:22f9c547@eu-cdbr-west-02.cleardb.net/heroku_071d102ea083bde?reconnect=true
+##spring.datasource.username=root
+##spring.datasource.password=admin
 
 spring.datasource.initialization-mode=always
 
