--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
 ################### DataSource Configuration ##########################
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
-spring.datasource.url=jdbc:mysql://b04fd5afbba5bb:22f9c547@eu-cdbr-west-02.cleardb.net/heroku_071d102ea083bde?reconnect=true
-
-##spring.datasource.url=jdbc:mysql://localhost:3306/thesisdb?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-##spring.datasource.username=root
-##spring.datasource.password=admin
+#######HEROKU########
+##spring.datasource.url=jdbc:mysql://b04fd5afbba5bb:22f9c547@eu-cdbr-west-02.cleardb.net/heroku_071d102ea083bde?reconnect=true
+#######LOCAL#########
+spring.datasource.url=jdbc:mysql://localhost:3306/thesisdb?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=admin
 
 spring.datasource.initialization-mode=always
 
@@ -15,8 +16,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 server.port=${PORT:8080}
 
-#server.port=${PORT:5000} KITELEPÍTVE HEROKURA
-#az 5000 port nélkül hibát dob
+#server.port=${PORT:5000} HEROKU
 
 
 ####################FILE UPLOAD#############################
